@@ -730,6 +730,9 @@ gboolean fm_edit_preference( GtkWindow* parent, int page )
 
         data = g_new0( FMPrefDlg, 1 );
         dlg = (GtkWidget*)gtk_builder_get_object( builder, "dlg" );
+        if ( parent )
+            gtk_window_set_transient_for( GTK_WINDOW( dlg ), parent );
+        update_window_icon( GTK_WINDOW( dlg ), gtk_icon_theme_get_default() );
 
         ptk_dialog_fit_small_screen( GTK_DIALOG( dlg ) );
         data->dlg = dlg;
@@ -1060,8 +1063,6 @@ gboolean fm_edit_preference( GtkWindow* parent, int page )
         g_object_unref( builder );
     }
 
-    if( parent )
-        gtk_window_set_transient_for( GTK_WINDOW( data->dlg ), parent );
     gtk_notebook_set_current_page( (GtkNotebook*)data->notebook, page );
 
     gtk_window_present( (GtkWindow*)data->dlg );
